_sass/_layout.scss
// Header
core-toolbar {
	line-height: 1em;
}

// Menus
core-menu {
	margin: 0;
}

// Page content
.page-content {
	margin: 0 auto;
	padding: $spacing-unit;
	max-width: $spacing-unit * 17;
}

// Code blocks
.highlight {
	padding: $spacing-unit * 0.4 $spacing-unit * 0.6 $spacing-unit / 12;
	border-radius: $spacing-unit / 12;
	margin: $spacing-unit / 12;
}

